feat(command): add tab completers for commands (#XX)